add structure to read CSVs as a starting point

--- a/src/MarketReplay.Api/Dockerfile
+++ b/src/MarketReplay.Api/Dockerfile
@@ -20,4 +20,5 @@ RUN dotnet publish "MarketReplay.Api.csproj" -c $BUILD_CONFIGURATION -o /app/pub
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY data ./data
 ENTRYPOINT ["dotnet", "MarketReplay.Api.dll"]
