--- a/src/MarketReplay.Api/MarketReplay.Api.csproj
+++ b/src/MarketReplay.Api/MarketReplay.Api.csproj
@@ -8,8 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.22"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.22" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
     <ItemGroup>
@@ -25,6 +25,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MarketReplay.Core\MarketReplay.Core.csproj" />
+      <ProjectReference Include="..\MarketReplay.Infrastructure\MarketReplay.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
