--- a/src/MarketReplay.Infrastructure/MarketReplay.Infrastructure.csproj
+++ b/src/MarketReplay.Infrastructure/MarketReplay.Infrastructure.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="System.IO.Abstractions" Version="22.1.0" />
+      <ProjectReference Include="..\MarketReplay.Core\MarketReplay.Core.csproj" />
     </ItemGroup>
 
 </Project>
