--- a/src/MarketReplay.Tests/MarketReplay.Tests.csproj
+++ b/src/MarketReplay.Tests/MarketReplay.Tests.csproj
@@ -15,10 +15,20 @@
         <PackageReference Include="NUnit" Version="3.14.0"/>
         <PackageReference Include="NUnit.Analyzers" Version="3.9.0"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0"/>
+        <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="22.1.0" />
     </ItemGroup>
 
     <ItemGroup>
         <Using Include="NUnit.Framework"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\MarketReplay.Api\MarketReplay.Api.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Unit\Core\Domain\Services\" />
+      <Folder Include="Unit\Infrastructure\" />
     </ItemGroup>
 
 </Project>
