Set up a background service properly!

--- a/src/MarketReplay.Core/MarketReplay.Core.csproj
+++ b/src/MarketReplay.Core/MarketReplay.Core.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="System.IO.Abstractions" Version="22.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="MarketReplay.Tests" />
+    </ItemGroup>
+
 </Project>
