--- a/src/MarketReplay.Infrastructure/MarketReplay.Infrastructure.csproj
+++ b/src/MarketReplay.Infrastructure/MarketReplay.Infrastructure.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\MarketReplay.Core\MarketReplay.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="MarketReplay.Tests" />
+    </ItemGroup>
+
 </Project>
