--- a/src/MarketReplay.Api/MarketReplay.Api.csproj
+++ b/src/MarketReplay.Api/MarketReplay.Api.csproj
@@ -28,4 +28,14 @@
       <ProjectReference Include="..\MarketReplay.Infrastructure\MarketReplay.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="data\BARC\5min\25-08.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="MarketReplay.Tests" />
+    </ItemGroup>
+
 </Project>
