--- a/src/MarketReplay.Tests/MarketReplay.Tests.csproj
+++ b/src/MarketReplay.Tests/MarketReplay.Tests.csproj
@@ -10,8 +10,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoFixture" Version="5.0.0-preview0012" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+        <PackageReference Include="NSubstitute" Version="5.3.0" />
         <PackageReference Include="NUnit" Version="3.14.0"/>
         <PackageReference Include="NUnit.Analyzers" Version="3.9.0"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0"/>
@@ -24,11 +26,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MarketReplay.Api\MarketReplay.Api.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Unit\Core\Domain\Services\" />
-      <Folder Include="Unit\Infrastructure\" />
     </ItemGroup>
 
 </Project>
