add JWT authorisation !!

--- a/src/MarketReplay.Api/appsettings.json
+++ b/src/MarketReplay.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Authority": "http://localhost:5000",
+    "Audience": "market-replay-ui",
+    "Key": "this-key-is-highly-secure-and-super-secret-and-should-never-actually-be-stored-in-app-settings"
+  }
 }
