--- a/src/MarketReplay.Infrastructure/MarketReplay.Infrastructure.csproj
+++ b/src/MarketReplay.Infrastructure/MarketReplay.Infrastructure.csproj
@@ -14,4 +14,8 @@
         <InternalsVisibleTo Include="MarketReplay.Tests" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.22" />
+    </ItemGroup>
+
 </Project>
