--- a/src/MarketReplay.Api/MarketReplay.Api.csproj
+++ b/src/MarketReplay.Api/MarketReplay.Api.csproj
@@ -22,6 +22,7 @@
     <ItemGroup>
       <Folder Include="Config\" />
       <Folder Include="DTOs\" />
+      <Folder Include="SignalR\" />
     </ItemGroup>
 
     <ItemGroup>
