--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,35 @@
 services:
+  kafka:
+    image: apache/kafka:latest
+    container_name: kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: "broker,controller"
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
+
+      KAFKA_LISTENERS: "PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka:9092"
+      KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
+
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+
+      KAFKA_LOG_DIRS: "/tmp/kraft-combined-logs"
+      CLUSTER_ID: "i3Q1u4MYQtWSW19e13UiqA"
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "9092"]
+      interval: 2s
+      timeout: 5s
+      retries: 10
+
   market-replay-api:
+    depends_on:
+      kafka:
+        condition: service_healthy
     build:
       context: ./
       dockerfile: src/MarketReplay.Api/Dockerfile 
@@ -10,6 +40,9 @@ services:
       - ASPNETCORE_HTTPS_PORT=
 
   market-replay-ui:
+    depends_on:
+      kafka:
+        condition: service_healthy
     build: 
       context: ./frontend
     ports:
