--- a/src/MarketReplay.Infrastructure/MarketReplay.Infrastructure.csproj
+++ b/src/MarketReplay.Infrastructure/MarketReplay.Infrastructure.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Confluent.Kafka" Version="2.12.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.22" />
     </ItemGroup>
 
