--- a/src/MarketReplay.Infrastructure/MarketReplay.Infrastructure.csproj
+++ b/src/MarketReplay.Infrastructure/MarketReplay.Infrastructure.csproj
@@ -16,7 +16,9 @@
 
     <ItemGroup>
       <PackageReference Include="Confluent.Kafka" Version="2.12.0" />
+      <PackageReference Include="Dapper" Version="2.1.66" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.22" />
+      <PackageReference Include="Npgsql" Version="10.0.1" />
     </ItemGroup>
 
 </Project>
